# dcc-mcp-maya-mgear

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  marketplace.json  pyproject.toml  release-please-config.json  reply.md  tools.yaml
.github/workflows/: ci-release-pr.yml  ci.yml  release.yml
dcc-mcp-maya-mgear/: marketplace.json
marketplace/: marketplace.json
scripts/: build_shifter_rig.py  create_shifter_guide_from_template.py  export_shifter_guide_template.py  import_shifter_sample_template.py  inspect_mgear_environment.py  list_shifter_components.py  validate_skill_package.py
skill/maya-mgear/: SKILL.md  tools.yaml
skill/maya-mgear/metadata/: depends.md
skill/maya-mgear/scripts/: create_shifter_guide_from_template.py  export_shifter_guide_template.py  import_shifter_sample_template.py  inspect_mgear_environment.py  list_shifter_components.py
skill/mgear-import-to-scene/: SKILL.md  tools.yaml
skill/mgear-import-to-scene/metadata/: depends.md
skill/mgear-import-to-scene/scripts/: import_to_scene.py
src/dcc_mcp_maya_mgear/: __init__.py
src/dcc_mcp_maya_mgear/skills/maya-mgear/: SKILL.md  groups.yaml  tools.yaml
src/dcc_mcp_maya_mgear/skills/maya-mgear/scripts/: __init__.py  build_shifter_rig.py  create_shifter_guide_from_template.py  export_shifter_guide_template.py  inspect_mgear_environment.py  list_shifter_components.py
tests/: __init__.py  conftest.py  test_build.py  test_components.py  test_environment.py  test_export.py  test_guide.py  test_mgear_skills.py  test_package.py
tools/: validate_skill_package.py
