[project]
name = "dcc-mcp-maya-mgear"
version = "0.4.2"
description = "mGear Shifter deep integration skills for dcc-mcp-maya"
authors = [{ name = "Long Hao", email = "hal.long@outlook.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
keywords = ["maya", "mgear", "mcp", "dcc", "rigging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]

dependencies = [
    "dcc-mcp-core>=0.18.2,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.8.0",
    "pyyaml>=5.0",
]

[project.urls]
Homepage = "https://github.com/dcc-mcp/dcc-mcp-maya-mgear"
Repository = "https://github.com/dcc-mcp/dcc-mcp-maya-mgear"
Issues = "https://github.com/dcc-mcp/dcc-mcp-maya-mgear/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 120
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["dcc_mcp_maya_mgear"]
